fixing layout issues

--- a/style.css
+++ b/style.css
@@ -82,9 +82,6 @@ h6 {
 
 /* general styling */
 body {
-  display: grid;
-  place-content: center;
-  padding: 1rem;
   background: var(--color-bg);
   font-family: var(--ff-accent);
   font-size: 0.9375rem;
@@ -99,6 +96,8 @@ img {
 .cards {
   border-radius: 0.5rem;
   overflow: hidden;
+  margin: 1rem auto;
+  max-width: 400px;
 }
 
 .card {
@@ -165,9 +164,15 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+  body {
+    display: grid;
+    place-content: center;
+  }
+
   .cards {
     display: flex;
     max-width: 940px;
+    align-content: center;
   }
 
   .card {
